<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayBackground"
    tools:context=".home.HomeFragment">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingTop="16dp"
        android:fontFamily="@font/nunito"
        android:text="@string/welcome"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:paddingBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/oluwafemi"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name">

        <TextView
            android:id="@+id/id_placeholder_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/nunito"
            android:text="@string/my_id"
            android:textColor="@color/colorGray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/id_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:layout_constraintTop_toBottomOf="@id/id_placeholder_text">

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/quick_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/nunito"
            android:text="@string/quick_action"
            android:textColor="@color/colorGray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_view" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quick_action">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/get_id"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/replace_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/colorGray">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/get_id_card"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/get_id_card"
                        android:textSize="16sp"
                        app:drawableTopCompat="@drawable/ic_temp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/replace_id"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/get_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/get_id"
                app:layout_constraintTop_toTopOf="@id/get_id"
                app:strokeColor="@color/colorGray">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/replace_id"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/replace_id"
                        android:textSize="16sp"
                        app:drawableTopCompat="@drawable/ic_temp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/payment"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:gravity="center"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/get_id"
                app:layout_constraintStart_toStartOf="@id/get_id"
                app:layout_constraintTop_toBottomOf="@id/get_id"
                app:strokeColor="@color/colorGray">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/payment"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/payment"
                        android:textSize="16sp"
                        app:drawableTopCompat="@drawable/ic_temp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/faq"
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/payment"
                app:layout_constraintEnd_toEndOf="@id/replace_id"
                app:layout_constraintStart_toStartOf="@id/replace_id"
                app:layout_constraintTop_toTopOf="@id/payment"
                app:strokeColor="@color/colorGray">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/faq"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/faq"
                        android:textSize="16sp"
                        app:drawableTopCompat="@drawable/ic_temp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>